[gd_scene load_steps=2 format=3 uid="uid://c7oas4r8m3p5k"]

[ext_resource type="Script" path="res://scripts/ui/game_over_ui.gd" id="1_game_over_ui"]

[node name="GameOverUI" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_game_over_ui")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="FinalScoreLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "게임 오버!
최종 점수: 0
웨이브: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RetryButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "다시 시작"

[node name="MainMenuButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "메인 메뉴로 가기"
